--- a/employees.html
+++ b/employees.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment 05 - Employee Management Application</title>
-
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
     <main>
