--- a/practice.html
+++ b/practice.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment 05 - DOM Practice</title>
-
+    <script>
+        var btn5 = window.document.getElementById("step5");
+        btn5.addEventListener("click", function () { "use strict"; window.alert("Button 5: I have been clicked!"); });
+    </script>
 </head>
 <body>
     <button onclick="writeMessage('Button 1: ')">Button 1</button>
@@ -15,6 +18,15 @@
     <input id="collectInput" type="text">
     <button id="step7">Button 7</button>
     <button id="step8">Button 8</button>
+    <button id="step9-start">Start</button>
+    <button id="step9-stop">Stop</button>
+    <select id = "step10-select">
+       <option value="Item 1">Item 1</option>
+       <option value="Item 2">Item 2</option>
+       <option value="Item 3">Item 3</option>
+       <option value="Item 4">Item 4</option>
+    </select>
+    <button id="step10">Select</button>
     <script src="js/dom-practice.js"></script>
 </body>
 </html>
