--- a/practice.html
+++ b/practice.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Assignment 05 - DOM Practice</title>
     <script>
-        var btn5 = window.document.getElementById("step5");
-        btn5.addEventListener("click", function () { "use strict"; window.alert("Button 5: I have been clicked!"); });
+        window.onload = function () {
+            var btn5 = window.document.getElementById("step5");
+            btn5.addEventListener("click", function () { "use strict"; window.alert("Button 5: I have been clicked!"); });
+        };
     </script>
 </head>
 <body>
@@ -18,8 +20,8 @@
     <input id="collectInput" type="text">
     <button id="step7">Button 7</button>
     <button id="step8">Button 8</button>
-    <button id="step9-start">Start</button>
-    <button id="step9-stop">Stop</button>
+    <button id="step9-start" onclick="interval()">Start</button>
+    <button id="step9-stop" onclick="clearInterval(i)">Stop</button>
     <select id = "step10-select">
        <option value="Item 1">Item 1</option>
        <option value="Item 2">Item 2</option>
